# sugar-next

./: CLAUDE.md  Makefile  flake.nix  package.json  pyproject.toml
.claude/: settings.json
mcp-servers/: README.md  gi-inspector.py  gtk-inspector-mcp.py  python-doc-mcp.py  wayland-protocol-mcp.py
openspec/changes/archive/2026-07-09-sugar-next-next/: tasks.md
openspec/changes/archive/2026-07-09-sugar-next-views-and-backends/: extension-contract.md  tasks.md
openspec/changes/archive/2026-07-10-casilda-activity-host/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-desktop-pie-menu/: design.md  proposal.md
openspec/changes/casilda-activity-host/: design.md  proposal.md  tasks.md
openspec/changes/casilda-activity-host/specs/activity-hosting/: spec.md
openspec/changes/casilda-activity-host/specs/frame-views/: spec.md
openspec/changes/desktop-pie-menu/: tasks.md
openspec/changes/sugar-next/: design.md  proposal.md  tasks.md
openspec/changes/sugar-next-next/: design.md  proposal.md  tasks.md
openspec/changes/sugar-next-next/specs/frame-views/: views-as-views.md
openspec/changes/sugar-next-next/specs/home-view/: spec.md
openspec/changes/sugar-next-next/specs/peer-collaboration/: spec.md
openspec/changes/unified-home-view/: design.md  proposal.md  tasks.md
openspec/specs/agentic-dev-tooling/: spec.md
openspec/specs/extensions/: spec.md
openspec/specs/frame-views/: spec.md
openspec/specs/gtk4-introspection-mcp/: spec.md
openspec/specs/home-view/: spec.md
openspec/specs/modern-monorepo-setup/: spec.md
openspec/specs/shell-startup/: spec.md
openspec/specs/window-observation/: spec.md
specbook/docs/: gtk-porting-standards.md  journal-graph-vision.md
sugar-next/: HIG.md  README.md  bootstrap.sh  pyproject.toml
sugar-next/examples/extensions/: logger.js
sugar-next/extensions/gnome-shell/sugar-next-windows@sugarlabs.org/: dbus-interface.xml  extension.js  metadata.json
sugar-next/session/: wayfire.ini
sugar-next/sugar_next/api/: backends.py  hooks.py
sugar-next/sugar_next/bundles/: desktop_bundle.py
sugar-next/sugar_next/shell/: app_grid.py  app_ordering.py  app_state.py  desktop_grid.py  frame.py  gnome_window_source.py  home_view.py  icon_state.py  main.py  pie_menu.py  ring_layout.py  search_first.py  settings.py  settings_store.py  theme.py  toplevel_tracker.py
sugar-next/tests/: test_activate_app.py  test_app_grid.py  test_app_ordering.py  test_app_state.py  test_backends.py  test_desktop_bundle.py  test_frame.py  test_home_view.py  test_icon_state.py  test_main_toplevel_filtering.py  test_pie_menu.py  test_ring_layout.py  test_settings_panel.py  test_settings_store.py  test_theme.py  test_toplevel_tracker.py  test_unified_home_view.py  test_xdg_compliance.py
(+6 files in other folders)
